--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 script: "bundle exec rake"
 rvm:
+  - 1.8.7
   - 1.9.2
   - 1.9.3
   - jruby-head
+  - jruby-18mode
   - jruby-19mode
 before_install:
   - gem uninstall ffi -a
