--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ rvm:
   - jruby-head
   - jruby-18mode
   - jruby-19mode
+matrix:
+  allow_failures:
+    - rvm: 1.8.7
+    - rvm: jruby-18mode
 before_install:
   - gem uninstall ffi -a
