Allow rbx to fail.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ rvm:
   - jruby-head
   - jruby-18mode
   - jruby-19mode
+matrix:
+  allow_failures:
+    - rvm: rbx
 before_install:
   - gem uninstall ffi -a
