--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-env:
-  - JRUBY_OPTS="-Xcext.enabled=true"
 script: "bundle exec rake"
 bundler_args: --without perf
 rvm:
@@ -9,7 +7,5 @@ rvm:
   - jruby-head
   - jruby-18mode
   - jruby-19mode
+  - rbx-18mode
   - rbx-19mode
-matrix:
-  allow_failures:
-    - rvm: rbx-19mode
