--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,15 @@ rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
+  - 2.0.0
+  - ree
   - jruby-head
   - jruby-18mode
   - jruby-19mode
   - rbx-18mode
   - rbx-19mode
+matrix:
+  allow_failures:
+    - rvm: 2.0.0
+    - rvm: ree
+ 
