--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,26 @@
-script: "bundle exec rake"
+language: ruby
+cache: bundler
 sudo: false
+
 bundler_args: --without perf
+script: bundle exec rake
+
 rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
-  - 2.0.0
+  - 2.0.0-p648
+  - 2.1.8
+  - 2.2.4
+  - 2.3.0
   - ruby-head
   - ree
-  - jruby-head
   - jruby-18mode
   - jruby-19mode
+  - jruby-head
+  - rbx-2
+
 matrix:
   allow_failures:
+    - rvm: ree
     - rvm: ruby-head
-    - rvm: jruby-head
-    - rvm: rbx-18mode
-    - rvm: rbx-19mode
