--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,7 @@
 language: ruby
-cache: bundler
-sudo: false
-
-bundler_args: --without perf
 script: bundle exec rake
-before_install:
-  - gem install bundler
-
+bundler_args: --without perf
 rvm:
-  - 1.8.7
-  - 1.9.2
   - 1.9.3
   - 2.0.0-p648
   - 2.1.10
@@ -24,7 +16,13 @@ rvm:
   - jruby-head
 
 matrix:
+  fast_finish: true
   allow_failures:
     - rvm: ree
     - rvm: ruby-head
     - rvm: jruby-head
+  include:
+    - rvm: 1.8.7
+      dist: precise
+    - rvm: 1.9.2
+      dist: trusty
