--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -30,7 +30,7 @@ jobs:
         then
           brew install curl
         else
-          sudo apt install -y libcurl4-openssl-dev
+          sudo apt update && sudo apt install -y --no-install-recommends libcurl4-openssl-dev
         fi
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
