--- a/.github/workflows/experimental.yml
+++ b/.github/workflows/experimental.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Experimental
 on: [push, pull_request]
 jobs:
   build:
@@ -9,7 +9,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu, macos]
-        ruby-version: ['2.6', '2.7', '3.0', '3.1', '3.2', '3.3', '3.4', truffleruby]
+        ruby-version:
+          - ruby-head
+          - jruby-head
+          - truffleruby-head
     steps:
       - uses: actions/checkout@v3
       - name: Install libcurl header
