--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -37,5 +37,13 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: '1.21'
+    - name: Start test server
+      run: |
+        cd spec/server && go run main.go &
+        sleep 2 && curl -f http://localhost:3001/__identify__ || sleep 3
     - name: Run tests
       run: bundle exec rake
