--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -24,6 +24,15 @@ jobs:
     continue-on-error: ${{ endsWith(matrix.ruby, 'head') || matrix.ruby == 'debug' }}
     steps:
     - uses: actions/checkout@v3
+    - name: Set up Ruby 3.4 for test server
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.4'
+    - name: Start test server
+      run: |
+        ruby spec/support/server.rb &
+        sleep 5
+        curl -f http://localhost:3001/ || (sleep 5 && curl -f http://localhost:3001/)
     - name: Install libcurl header
       run: |
         if ${{ matrix.os == 'macos' }}
